10-02-23 11:20 Listo usuarios y BD

--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
 
     "material-icons": "^1.11.1",
 
+    "ngx-cookie-service": "^15.0.0",
+
     "ngx-toastr": "^14.2.3",
 
     "pdfjs-dist": "^2.14.305",
