--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
 node_modules
-.angular/cache/13.3.2
+.angular/cache
 dist
 dist/
 /dist
-node_modules.zip
-dist/SJIII
-dist/SJII
-dist/SJI
-dist/Venezuela
-dist/Palacio
-dist/Mega
-dist/Kanta
-dist/Huaral
-dist/Huandoy
-dist/Pro
-dist/Ingreso
