--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
 
     "angular-google-charts": "^2.2.2",
 
+    "flowbite": "^2.3.0",
+
     "hammerjs": "^2.0.8",
 
     "html2canvas": "^1.4.1",
@@ -121,6 +123,8 @@
     "pdf-parse": "^1.1.1",
 
     "protractor": "~7.0.0",
+
+    "tailwindcss": "^3.4.1",
 
     "ts-node": "~7.0.0",
 
