--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.2.10",
+    "@angular/animations": "^15.2.10",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "~15.2.10",
-    "@angular/core": "~15.2.10",
-    "@angular/forms": "~15.2.10",
+    "@angular/common": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
     "@angular/material": "^13.3.2",
-    "@angular/platform-browser": "~15.2.10",
-    "@angular/platform-browser-dynamic": "~15.2.10",
-    "@angular/router": "~15.2.10",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
     "@types/html2canvas": "^1.0.0",
     "@types/jspdf": "^2.0.0",
     "angular-google-charts": "^2.2.2",
@@ -43,11 +43,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.2",
-    "@angular/cli": "^13.3.2",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/cli": "^14.2.13",
     "@angular/compiler": "^15.2.10",
     "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "~15.2.10",
+    "@angular/language-service": "^15.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.55",
