--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
   "angularCompilerOptions": {
     "allowSyntheticDefaultImports": true,
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "enableIvy": false
   }
 }
